# Generated by Django 6.0.6 on 2026-06-14 13:00

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Dataset',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=160)),
                ('kind', models.CharField(choices=[('production', 'PV Production'), ('consumption', 'Energy Consumption')], max_length=20)),
                ('file', models.FileField(upload_to='datasets/')),
                ('status', models.CharField(choices=[('PENDING', 'Pending'), ('VALID', 'Valid'), ('INVALID', 'Invalid')], default='PENDING', max_length=10)),
                ('rows', models.PositiveIntegerField(default=0)),
                ('columns', models.JSONField(blank=True, default=list)),
                ('message', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
    ]
