# Generated by Django 6.0.6 on 2026-06-14 13:00

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Equipment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=120)),
                ('equipment_type', models.CharField(blank=True, max_length=80)),
                ('rated_power_kw', models.FloatField(default=0)),
                ('priority', models.CharField(choices=[('CRITICAL', 'Critical'), ('IMPORTANT', 'Important'), ('NORMAL', 'Normal'), ('NON_CRITICAL', 'Non critical')], default='NORMAL', max_length=15)),
                ('status', models.CharField(choices=[('ACTIVE', 'Active'), ('INACTIVE', 'Inactive'), ('SHEDDED', 'Shedded'), ('FAULT', 'Fault')], default='ACTIVE', max_length=10)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'verbose_name_plural': 'equipment',
                'ordering': ['house', 'name'],
            },
        ),
        migrations.CreateModel(
            name='Sensor',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=120)),
                ('sensor_type', models.CharField(choices=[('production', 'Production'), ('consumption', 'Consumption'), ('battery', 'Battery'), ('voltage', 'Voltage'), ('current', 'Current'), ('power', 'Power'), ('temperature', 'Temperature')], max_length=20)),
                ('unit', models.CharField(default='kW', max_length=20)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'ordering': ['house', 'name'],
            },
        ),
    ]
