# Generated by Django 6.0.6 on 2026-06-14 13:00

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('devices', '0001_initial'),
        ('houses', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Measurement',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('measurement_type', models.CharField(choices=[('production', 'Production'), ('consumption', 'Consumption'), ('battery_soc', 'Battery SoC'), ('voltage', 'Voltage'), ('current', 'Current'), ('power', 'Power'), ('temperature', 'Temperature')], max_length=20)),
                ('value', models.FloatField()),
                ('unit', models.CharField(default='kW', max_length=20)),
                ('timestamp', models.DateTimeField(db_index=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('house', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='measurements', to='houses.house')),
                ('sensor', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='measurements', to='devices.sensor')),
            ],
            options={
                'ordering': ['-timestamp'],
                'indexes': [models.Index(fields=['house', 'measurement_type', '-timestamp'], name='measurement_house_i_609911_idx')],
            },
        ),
    ]
